[package]
name = "ssguard"
version = "0.1.0"
authors = ["huangjiahua <jh@jiahuah.com>"]
edition = "2018"



[dependencies]
mysql_async = "0.21.1"
tokio = { version = "0.2", features = ["full", "rt-threaded"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4.0"
env_logger = "0.6.2"
